--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
     }
   ],
   "start_url": "https://viniyuk.maplaet.com/",
-  "background_color": "#3367D6",
+  "background_color": "#ffffff",
   "display": "standalone",
   "theme_color": "#3367D6"
 }
