--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "viniyuk",
-  "name": "viniyuk",
+  "short_name": "VINIYUK",
+  "name": "VINIYUK",
   "icons": [
     {
       "src": "assets/img/logo-192.png",
