--- a/manifest.json
+++ b/manifest.json
@@ -16,5 +16,5 @@
   "start_url": "https://viniyuk.maplaet.com/",
   "background_color": "#ffffff",
   "display": "standalone",
-  "theme_color": "#3367D6"
+  "theme_color": "#ffffff"
 }
